--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     text-align: right;
     color: white;
     font-size: 30px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
 }
 
 
