--- a/style.css
+++ b/style.css
@@ -15,13 +15,21 @@ body {
 }
 
 #calculator {
-    width: 375px;
-    height: 812px;
+    min-width: 100%;
+    min-height: 100%;
+    /* width: 375px;
+    height: 812px; */
     background-color: #111;
     color: #fff;
     display: grid;
     grid-template-rows: 0.2fr 0.8fr;
 }
+/* @media only screen and (max-width: 480px){
+    #calculator{
+        width: 100%;
+        height: 100%;
+    }
+} */
 
 .display {
     background-color: #202122;
@@ -37,7 +45,7 @@ body {
     text-align: right;
     color: white;
     font-size: 30px;
-    /* padding-right: 10px; */
+    padding-right: 10px;
 }
 
 
